mktoc v1.0 // (c) 2008, Patrick C. McGinty

Ver. 1.0 -- ?/?/2008
   * Initial release .. enjoy!