@@ -17,26 +17,91 @@
 
 """
 Description:
-   This program simplifies the creation of audio CDs when burning with
-   cdrdao. Specifically, it will convert an ExactAudioCopy (EAC) CUE
-   file to the TOC format that is readable by cdrdao.
+   mktoc simplifies the steps needed to create audio CD TOC files for the
+   cdrdao CD burning program. For users familiar with ExactAudioCopy or CdrWin,
+   TOC files are synonymous with CUE sheets. The primary goal of mktoc is to
+   create TOC files using a previously generated CUE sheet.
 
-   This program focuses primarily on EAC CUE files. It includes support
-   for non-compliant CUE files, including pregaps at the end of previous
-   tracks.  There are additional features to detect and fix incorrect
-   file path names and extension types.
+Features:
+
+    * Convert an ExactAudioCopy (EAC) CUE file to the TOC format that is usable
+      by cdrdao.
+    * Non-compliant CUE sheet support.
+    * Support for various pregap methods.
+    * Can create offset corrected WAV files for true 'bit-for-bit' accurate
+      copies.
+    * Fuzzy file name logic can correct common file name spelling variations.
+    * Workaround known TOC file parsing bugs in cdrdao.
 
 Usage:
    mktoc [OPTIONS] [CUE_FILE]
    mktoc [OPTIONS] [CUE_FILE] -o [TOC_FILE]
    mktoc [OPTIONS] < CUE_FILE
 
-   CUE_FILE must contain a valid CUE format. When FILE is not provided,
-   the program will read from STDIN. All output will be sent to STDOUT.
+   CUE_FILE must contain a valid CUE format. When FILE is not provided, the
+   program will read from STDIN. All output will be sent to STDOUT.
 
-   All attempts will be made to preserve any and all information from
-   the input file. For any case where the CUE file contains unknown or
-   bad values, the user will be notified on STDERR.
+   All attempts will be made to preserve any and all information from the input
+   file. For any case where the CUE file contains unknown or bad values, the
+   user will be notified on STDERR.
+
+Options:
+   --version
+         show program's version number and exit
+
+   -h, --help
+         show help message and exit
+
+   -a, --allow-missing-wav
+         do not abort when WAV file(s) are missing, (experts only). It is
+         possible when using this option that a bug in cdrdao will create a CD
+         that ignores the pre gap definitions in the TOC file. Only use this
+         option if the CUE file does not contain pre gaps, or if you do not
+         wish to retain the pre gap information.
+
+   -c WAV_OFFSET, --offset-correction=WAV_OFFSET
+         correct reader/writer offset by creating WAV file(s) shifted by
+         WAV_OFFSET samples (original data is not modified)
+
+   -f CUE_FILE, --file=CUE_FILE
+         specify the input CUE file to read
+
+   -o TOC_FILE, --output=TOC_FILE
+         specify the output TOC file to write
+
+   -t, --use-temp
+        write offset corrected WAV files to /tmp directory
+
+Examples:
+
+   1) Display the TOC file, given an input CUE file:
+
+      mktoc cue_file.cue
+      mktoc < cue_file.cue
+      mktoc -f cue_file.cue
+
+   2) Write a TOC file to 'toc_file.toc', given an input CUE file:
+
+      mktoc cue_file.cue toc_file.toc
+      mktoc < cue_file.cue > toc_file.toc
+      mktoc -f cue_file.cue -o toc_file.toc
+
+   3) Tell mktoc to ignore missing WAV file errors, possible causing incorrect
+      TOC file results (see above).
+
+      mktoc -a cue_file.cue
+
+   4) Adjust WAV files for a CD writer offset value. For example, if your CD
+      writer has a -30 sample write offset, it can be corrected by offsetting
+      the input WAV files by +30 samples. New wav files will be placed in the
+      working directory in a new dir called 'wav+30'
+
+      mktoc -c 30 < cue_file.cue
+
+   5) Adjust WAV files for a CD writer offset value, but create new files in
+      the /tmp directory.
+
+      mktoc -c 30 -t < cue_file.cue
 
 E-mail:
    mktoc[@]tuxcoder[dot]com
