@@ -1,4 +1,5 @@
-mktoc v1.0 // (c) 2008, Patrick C. McGinty
+mktoc // (c) 2008, Patrick C. McGinty
+mktoc[@]tuxcoder[dot]com
 
 Ver. 1.0 -- ?/?/2008
    * Initial release .. enjoy!
